--- a/css/blog.css
+++ b/css/blog.css
@@ -1,1 +1,22 @@
-
+body{
+    	background-color: rgba(211,244,244,0.4);
+    }
+    p.paragraph{
+	    word-wrap: break-word; 
+	    word-break: normal;
+        margin-left: 100px;
+        margin-right: 100px;
+        font-size: 25px;
+        text-indent:2em;
+	    border-style: none;
+	    background-color: rgba(255,255,255,0.2);
+    }
+	h1.title{
+		text-align:center;
+		font-size: 35px;
+	}
+	h3.subtitle{
+		text-align:center;
+		color: #e7eaed;
+		font-size: 25px;
+	}
