--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,7 @@
-body{
+	body{
     	background-color: rgba(211,244,244,0.4);
     }
-    p.paragraph{
+    	p.paragraph{
 		word-wrap: break-word; 
 		word-break: normal;
         	margin-left: 100px;
@@ -15,8 +15,25 @@ body{
 		text-align:center;
 		font-size: 35px;
 	}
-	h3.subtitle{
+	h3.deptitle{
 		text-align:center;
-		color: #e7eaed;
+		color: #aca5b0;
 		font-size: 25px;
+	}
+	h3.subtitle{
+		color:555555;
+		border-left:3px solid #999999;
+		margin-block-start: 1em;
+		box-sizing: border-box;
+		padding: 10px;
+		margin-left: 100px;
+		word-wrap: break-word; 
+		word-break: normal;
+		font-size: 25px;
+		text-indent:13px;
+	}
+	a{
+		text-decoration:none;
+	}
+	a.udl{
 	}
