--- a/css/blog.css
+++ b/css/blog.css
@@ -1,35 +1,65 @@
+
 	body{
-    	background-color: rgba(211,244,244,0.4);
+    		background-color: rgba(211,244,244,0.4);
+  		background-image: url(https://api.dujin.org/bing/1920.php);
+ 		background-position: center center;
+ 		background-repeat: no-repeat;
+  		background-size: cover;
+  		background-attachment: fixed;
     }
     	p.paragraph{
 		word-wrap: break-word; 
         	margin-left: 100px;
         	margin-right: 100px;
-        	font-size: 20px;
+        	font-size: 25px;
         	text-indent:2em;
-	   	border-style: none;
-	    	background-color: rgba(255,255,255,0.2);
+  		border-style: 2px solid rgba(255,255,255,0.2);
+            	border-radius: 16px;
+            	background-color: rgba(255,255,255,0.2);
+            	backdrop-filter: blur(5px);
+                letter-spacing: 1px;
     }
-	h1.title{
+	h1.title{ 
 		text-align:center;
 		font-size: 35px;
+        	color: white;
+		word-wrap: break-word;
+        	letter-spacing: 5px;
+        	border-style: none;
+        	background-color: rgba(255,255,255,0.4);
+        	border-radius: 16px;
+        	margin-left: 100px;
+        	margin-right: 100px;
 	}
 	h3.deptitle{
 		text-align:center;
-		color: #aca5b0;
-		font-size: 25px;
+		color: #ffffff;
+        	font-size:20px;
+		word-wrap: break-word;
+        	letter-spacing: 5px;
+        	border-style: none;
+        	background-color: rgba(255,255,255,0.2);
+        	border-radius: 16px;
+        	margin-left: 200px;
+        	margin-right: 200px;
+        	margin-top: -20px;
+        	margin-bottom: -20px;
 	}
 	h3.subtitle{
-		color:555555;
-		border-left:3px solid #999999;
+		color: rgba(255,255,255,0.7);
+		border-left:3px solid rgba(255,255,255,0.7);
 		margin-block-start: 1em;
 		box-sizing: border-box;
-		padding: 10px;
-		margin-left: 100px;
+		padding: 3px;
+		margin-left: 120px;
+        	margin-right: 100px
 		word-wrap: break-word; 
 		word-break: normal;
 		font-size: 25px;
 		text-indent:13px;
+        	background-color: rgba(255,255,255,0.2);
+		word-wrap: break-word;
+        	letter-spacing: 5px;
 	}
 	a{
 		text-decoration:none;
