--- a/css/blog.css
+++ b/css/blog.css
@@ -52,7 +52,7 @@
 		box-sizing: border-box;
 		padding: 3px;
 		margin-left: 120px;
-        	margin-right: 100px
+        	margin-right: 100px;
 		word-wrap: break-word; 
 		word-break: normal;
 		font-size: 25px;
