--- a/css/blog.css
+++ b/css/blog.css
@@ -30,6 +30,7 @@
         	border-radius: 16px;
         	margin-left: 100px;
         	margin-right: 100px;
+		-webkit-text-stroke: 0.1px black;
 	}
 	.deptitle{
 		text-align:center;
@@ -44,10 +45,11 @@
         	margin-right: 200px;
         	margin-top: -10px;
         	margin-bottom: -20px;
+		-webkit-text-stroke: 0.1px black;
 	}
 	.subtitle{
 		color: rgba(255,255,255,0.7);
-		border-left:3px solid rgba(255,255,255,0.7);
+		border-left:3px solid #ffffff;
 		margin-block-start: 1em;
 		box-sizing: border-box;
 		padding: 3px;
@@ -60,6 +62,7 @@
         	background-color: rgba(255,255,255,0.2);
 		word-wrap: break-word;
         	letter-spacing: 5px;
+		-webkit-text-stroke: 0.1px black;
 	}
 	a{
 		text-decoration:none;
